@@ -37,7 +37,7 @@
 	
 	<p>You will be given a chance to review the flights before they are actually imported.</p><br>
 
-      <p><i>This feature is still experimental.  Please <a href="/contact.html">report</a> any bugs or oddities, and be sure to include the exact error and the "Tmpfile" value from the top of the import page.</i></p>
+      <p><i>This feature is still experimental.  Please <a href="/contact.html">report</a> any bugs or oddities, and be sure to include the exact error and the "Tmpfile" value from the top of the import page.</i></p><br>
 
 	<input type="submit" name="action" value="Upload">
 	<INPUT type="button" value="Cancel" onClick="window.close()">
