@@ -26,6 +26,12 @@
 
 	    <div id="maptitle">
 	    </div>
+
+	    <div id="news">
+	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
+	      <B>News</b>: 20 Sep 2008: <a href="/about.html#CHANGES">Importing from FlightMemory added.</a><br>
+<i>Please hit CTRL-F5 to ensure your browser loads the latest version.</i><br>
+	    </div>
 	    
 	    <div id="ajaxloader">
 	      <span id="ajaxstatus" style="display: none"><img src="/img/ajax-wait.gif" height=100 width=100/></span>
@@ -92,6 +98,7 @@
 		<br><b>Control panel</b><br>
 		<input type="button" value="New flight" align="middle" onclick='JavaScript:clearInput()'>
 		<input type="button" value="List flights" align="middle" onclick='JavaScript:startListFlights()'>
+		<input type="button" value="Import" align="middle" onclick='JavaScript:openImport()'>
 		<input type="button" value="Settings" align="middle" onclick='JavaScript:settings()'>
 		<input type="button" value="Logout" align="middle" onclick='JavaScript:xmlhttpPost("/php/logout.php")'>
 	      </div>
@@ -103,7 +110,6 @@
 
 	<div id="resultbox">
 	  <div id="ad" style="display: inline;">
-	    <B>News</b>: 17 Sep 2008: <a href="/about.html#CHANGES">Private airports added, tweaks to filters.</a> <i>Please hit CTRL-F5 to refresh.</i><br>
 	    <!--#include virtual="/html/ad.html" -->
 	  </div>
 
