@@ -1,3 +1,11 @@
+<b>2008-09-20</b>
+
+* FlightMemory importing implemented
+* Rendering up to 100% faster by treating X-Y,Y-X flights as identical
+* "Top 10 Routes" now considers X-Y same as Y-X
+* Cleaner "News" dialog
+* User's other trips no longer shown when viewing a single trip
+
 <b>2008-09-17</b>
 
 * Added Google ads and implemented stack for tracking panes
